fix icons alignment in project card

--- a/style.css
+++ b/style.css
@@ -336,6 +336,9 @@ main
   padding: var(--space-16);
   background-color: hsla(var(--white), var(--opacity-50));
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .project-name {
